// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
<input
  checked={false}
  className="css-0"
  onChange={[Function]}
  type="checkbox"
  value={false}
/>
`;

exports[`<Checkbox withProps />  renders with all props correctly 1`] = `
<input
  checked={false}
  className="css-0"
  disabled={false}
  onChange={[Function]}
  type="default"
  value={false}
/>
`;
